2002-04-25  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.5.13

	* src/libsoup/soup-socks.c (soup_socks_get_dest_connection):
	Added.  Creates a SoupConnection using the SOCKS socket but the
	real HTTP/HTTPS context.
	(soup_socks_read): Calls soup_socks_get_dest_connection() to pass
	the correct connection into the callback.

2002-03-22  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.5.12

	* src/libsoup/soup-ssl-tunnel.c (soup_ssl_tunnel_read): Null
	terminate the byte array before passing it on to
	soup_headers_parse_response() to avoid reading out-of-bounds.

2002-03-07  Alex Graveley  <alex@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.5.11

	* src/libsoup/soup-queue.c (soup_queue_read_headers_cb): Check for
	Chunked encoding before content-length, in case both are specified
	by broken proxies.
	(soup_queue_shutdown): Check soup_queue_idle_tag before attempting
	to call g_source_remove on it.

2002-02-20  Joe Shaw  <joe@ximian.com>

	* configure.in: Don't clobber CPPFLAGS when checking for popt.
	Patch from Frank Belew (frb@ximian.com)

2002-02-20  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.5.10

	* src/libsoup/soup-ssl-tunnel.c (soup_ssl_tunnel_read): Add code
	for handling proxy authentication when tunnelling SSL traffic.

2002-02-12  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-queue.c (soup_queue_connect_cb): Check to make
	sure we have a proxy context before farming the request off to the
	SSL-over-HTTP tunnel.

2002-02-11  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-openssl.c (soup_openssl_write): Backport a fix
	from the 0.6 branch from Dan Winship.

2002-02-07  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.5.9

	* src/libsoup/Makefile.am: Add soup-ssl-tunnel.[ch].

	* src/libsoup/soup-headers.c (soup_headers_parse_request): Don't
	barf if we pass in a NULL header GHashTable.
