@@ -1,3 +1,9 @@
+2002-05-06  Joe Shaw  <joe@ximian.com>
+
+	* src/libsoup/soup-ssl-proxy/soup-openssl.c,
+	src/libsoup/soup-ssl-proxy/soup-ssl-proxy.c: Backport fixes from
+	the 0.7 branch.
+
 2002-04-25  Joe Shaw  <joe@ximian.com>
 
 	* configure.in, src/libsoup/soup-private.h: Version 0.5.13
